<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/filr_file_sort_by"/>
        <RadioButton
            android:id="@+id/filr_sort_by_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/filr_file_sort_by_name"/>
        <RadioButton
            android:id="@+id/filr_sort_by_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/filr_file_sort_by_size"/>
        <RadioButton
            android:id="@+id/filr_sort_by_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/filr_file_sort_by_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/filr_file_order_by"/>
        <RadioButton
            android:id="@+id/filr_order_by_asc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/filr_file_order_by_asc"/>
        <RadioButton
            android:id="@+id/filr_order_by_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/filr_file_order_by_desc"/>
    </LinearLayout>
</LinearLayout>